Revision history for App-Doh

          - Switched status messages to JS notice board

0.4.1     2014-07-26 01:04:29
          - Added insertGraves to markdown editor
          - Added CodeMirror JS markdown editor
          - Added config user attribute to own Daemon process
          - Added Role::Component. Doh.pm contains only VERSION number
          - Streamlined the controller code
          - Server throws better exceptions
          - Patched bug in warnings::illegalproto for Perl < 5.012
          - Pass appclass in from doh-server
          - Abstracted apps env var access out to a function
          - Split Behaviour js class out into own file
          - Markdown allows class on trailing three graves
          - Added default view configuration option
          - Use App::Doh in ::Server to get VERSION in scope

0.3.1     2014-07-19 20:44:34
          - Tested on Chrome and Opera
          - Server now loads MVC components at runtime
          - Rationalised the templates
          - Fixed footer and add JS handler for content margin-bottom
          - Added minimum password length
          - Admin page functional improvements
          - Improved CSS for forms
          - Upated metadata
          - Added user profile management
          - Added ::Session to MANIFEST
          - Added ::Session. Added session timeout
          - Adjusted CSS tips box model
          - Adjusted CSS prompt widths
          - Removed unsed dependency
          - Fixed tests
          - Admin interface update user roles
          - Admin interface creates / deletes / activate / deactives users
          - Adding bcrypt based authentication
          - Renamed some model methods. Updated prereqs
          - Editing posts works!
          - Added ::Auth::Htpasswd to bypass auth for static page generation
          - Renamed attribute handler class to ::Attributes
          - Moved attribute handlers to own class
          - Deleted ::Auth::Htpasswd