@@ -166,6 +166,14 @@
    background: url(../img/icons.png) no-repeat -30px -60px;
    display: inline-block; height: 16px; overflow: hidden; width: 16px;
 }
+.icon-h2 {
+   background: url(../img/icons.png) no-repeat -240px -180px;
+   display: inline-block; height: 16px; overflow: hidden; width: 16px;
+}
+.icon-h3 {
+   background: url(../img/icons.png) no-repeat -270px -180px;
+   display: inline-block; height: 16px; overflow: hidden; width: 16px;
+}
 .icon-image {
    background: url(../img/icons.png) no-repeat -240px 0;
    display: inline-block; height: 16px; overflow: hidden; width: 16px;
